--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,21 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#0f0f1e" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="DatingAdvice.io - Your Personal AI Relationship Strategist. Get expert relationship advice from Clarity, powered by AI."
     />
+    <meta name="keywords" content="dating advice, relationship tips, dating coach, AI dating, relationship help" />
+    <meta name="author" content="DatingAdvice.io" />
+    <meta property="og:title" content="DatingAdvice.io - AI Relationship Strategist" />
+    <meta property="og:description" content="Talk to Clarity. Talk to Love. Your Personal AI Relationship Strategist is ready." />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DatingAdvice.io - AI Relationship Strategist" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>DatingAdvice.io - Your AI Relationship Strategist</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
