Setup separate backend-service directory for Render deployment

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="public\logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0f0f1e" />
     <meta
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="DatingAdvice.io - AI Relationship Strategist" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="public\logo.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>DatingAdvice.io - Your AI Relationship Strategist</title>
   </head>
